--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,16 +2,16 @@
 		<div class="container">
 			<p class="mainfoot--list">
 				<span class="mainfoot--link">All pages</span> 
-				{% for page in site.pages %}
+				{% for page in site.pages | sort:'title' %}
 				<a href="{{ site.baseurl}}{{ page.permalink }}" class="mainfoot--link">{% if page.nav-title %}{{ page.nav-title }}{% else %}{{ page.title }}{% endif %}</a> 
 				{% endfor %}
 			</p>
-			<p class="mainfoot--copyright">&copy;2016 Oomph, Inc.</p>
+			<p class="mainfoot--copyright">&copy;{{ 'now' | date: '%Y' }} Oomph, Inc.</p>
 		</div>
 	</footer>
-
+	
 	<div id="size"></div>
-
+ 
 	<script src="//code.jquery.com/jquery-1.12.2.min.js"></script>
     <script src="{{ "assets/js/plugins.js" | prepend: site.baseurl }}"></script>
     <script src="{{ "assets/js/main.js" | prepend: site.baseurl }}"></script>
