Override specific styles for a patten so that we can have more than one living side by side

--- a/_sass/component/_navigation.scss
+++ b/_sass/component/_navigation.scss
@@ -26,3 +26,20 @@
 		}
 	}
 }
+
+
+// Override Specific styles for a pattern
+.layout-left-drawer-pattern {
+
+	.mainnav {
+		background-color: transparent;
+
+		&--list {
+			text-align: left;
+
+			li { display: block; }
+		}
+
+		&--link { background-color: transparent; }
+	}
+}
