--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,13 +1,18 @@
-<head lang="en-US">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-    
-    <meta name="viewport" content="width=device-width">
-    <meta name="description" content="{{ site.description }}">
-    <script src="{{ "assets/js/modernizr.js" | prepend: site.baseurl }}"></script>
-    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+	<meta name="description" content="{{ site.description }}">
+	<meta name="viewport" content="width=device-width">
+	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
-    <link rel="stylesheet" href="{{ "assets/css/styles.css" | prepend: site.baseurl }}">
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+	<!-- <link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
+	<!-- Place favicon.ico in the root directory -->
+
+	<link rel="stylesheet" href="{{ "/assets/css/styles.css" | prepend: site.baseurl }}">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
+	<script src="{{ site.baseurl }}/assets/js/modernizr.js"></script>
+
+	<!-- Source order from https://github.com/h5bp/html5-boilerplate/blob/master/src/index.html -->
 </head>
