Wrong color declaration and missing index map was causing errors

--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -13,3 +13,10 @@ $default-border-radius: 4px;
 $table-border-collapse: true;
 $table-border-color: $default-border-color;
 $table-cell-padding: .5em;
+
+// Z-indices
+$zindex: (
+	body: 1,
+	overlay: 9999,
+	navtoggle: 10000
+);
