--- a/_sass_patterns/patterns/_left-drawer-push.scss
+++ b/_sass_patterns/patterns/_left-drawer-push.scss
@@ -115,7 +115,7 @@ $mainnav-width-large: 192px;
 $animation-duration: 400ms; 
 
 $mainnav-linkcolor: palette(brand); 
-$mainnav-hovercolor: palette(brand, light);
+$mainnav-hovercolor: palette(mono, 10);
 
 
 // A hamburger drawn with psuedo elements. And animated. 
