Spacing issues. Path to an include was incorrect.

--- a/_layouts/left-drawer-pattern.html
+++ b/_layouts/left-drawer-pattern.html
@@ -8,7 +8,7 @@
 		<div id="top" class="page fwf--row">
 			<div class="mainnav fwf--fixed__left" role="complementary">
 				
-				{% include ns-navigation.html %}
+				{% include partials/navigation.html %}
 			
 			</div>
 			<div class="fwf--fluid-wrapper" role="main">
