Change the location of the navigation include

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,8 @@
 	
 	<header class="mainhead">
 		<div class="container">
-			<a class="mainhead--title" href="{{ site.baseurl }}">Sippy Cup</a>
+			<a class="mainhead--title" href="{{ site.baseurl }}">Grey Matter</a>
 		</div>
 	</header>
 	
-	{% include partials/navigation.html %}
+	{% include navigation.html %}
