--- a/_sass/component/_global.scss
+++ b/_sass/component/_global.scss
@@ -1,4 +1,3 @@
-// @file Global Styles
 
 // Type Sizes
 $base-type-size: 1em;
@@ -25,6 +24,18 @@ object {
 	display: block;
 	height: auto;
 	max-width: 100%;
+}
+
+//
+// Text selection colors. Keep declarations separate
+//
+::selection {
+	background: palette(brand);
+	color: palette(mono, white);
+}
+::-moz-selection {
+	background: palette(brand);
+	color: palette(mono, white);
 }
 
 //
