--- a/_sass/component/_forms.scss
+++ b/_sass/component/_forms.scss
@@ -18,25 +18,26 @@ fieldset {
 label {}
 
 #{$all-text-inputs} {
+	@include transition( all 250ms ease );
 	border: $form-input-border-width solid $form-input-border-color;
+	box-sizing: border-box; // Declare explicitly, as form elements do not inherit from HTML declaration in iOS and Android
 	border-radius: $form-input-border-radius;
 	color: $form-input-color;
 	padding: $form-input-padding;
 	width: 100%;
-	@include transition( all 250ms ease );
 
 	@include placeholder {
 		color: $form-input-placeholder-color;
 		font-style: italic;
 	}
-	
+
 	@include touch-hover() {
 		border-color: darken($form-input-border-focus, 10%);
 		outline: none;
 	}
-	
-	&[required]:focus, 
-	&[required=true]:focus, 
+
+	&[required]:focus,
+	&[required=true]:focus,
 	&[required="required"]:focus {
 		border-color: palette(brand);
 		box-shadow: 0 0 .5em rgba( palette(brand), .5 );
@@ -45,23 +46,7 @@ label {}
 }
 
 #{$all-text-inputs-focus} {
-	border-color: $form-input-border-focus;
 	color: $form-input-color;
-	outline: none;
-}
-
-button[disabled],
-.button.disabled, 
-input[disabled],
-select[disabled],
-select[disabled] option,
-select[disabled] optgroup,
-textarea[disabled] {
-	-moz-user-select: -moz-none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	user-select: none;
-	cursor: not-allowed;
 }
 
 textarea {
@@ -95,42 +80,3 @@ input[type="email"],
 input[type="url"],
 input[type="tel"],
 input[type="number"] { -webkit-appearance: textfield; }
-
-
-// Forms with a class .form and some helpful patterns that come up often
-.form {
-	@include clearfix();
-
-	// Single line input and button pattern. Button needs to be in the markup first
-	/*<div class="form--singleline">
-		<button class="button button--primary">Go</button>
-		<span class="form--overflow"><input type="search" class="form--input" placeholder="Search the site&hellip;"></span>
-	</div>*/
-	&--singleline .button { float: right; }
-
-	&--singleline &--overflow {
-		display: block;
-		padding-right: .5em;
-		overflow: hidden;
-	}
-
-	&--singleline &--optional { float: left; }
-
-	&--singleline input { width: 100%; }
-
-	// Position elements over an input
-	/*<div class="form--position-wrap">
-		<input type="search" class="form--input" placeholder="Search the site…">
-		<button class="form--position--element"><span class="fa fa-search" aria-hidden="true"><span>Search</span></span></button>
-	</div>*/
-	&--position-wrap {
-		position: relative;
-		z-index: 1;
-	}
-	
-	&--position--element {
-		position: absolute; 
-			// add positioning parameters to the particular element
-		z-index: 2;
-	}
-}
