--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -1,31 +1,35 @@
 // @file styles.scss
 
-// #Requirements: Does not output CSS
+// #Requirements
 @import
-	// Libraries and breakpoints
-	"libraries/bourbon/bourbon",
-	"libraries/neat/neat",
+"libraries/bourbon/bourbon",
+"layout/settings",
+"libraries/neat/neat";
 
-	// Core functions, mixins and variables
-	"base/functions",
-	"base/mixins",
-	"layout/breakpoints",
-	"base/colors",
-	"base/typesizes",
-	"base/variables",
-
-// These will start to output some CSS
-	// Reset and global styles
-	"base/reset",
-	"base/accessibility",
-	"base/typography",
-	
-	// Layout and Grid
-	"layout/layout",
-
-	// All files inside with SASS globbing FTW
-	"component/*";
-
-// Using patterns? Turn on or off as needed:
 @import
-	//"patterns/left-drawer-push";
+// #Mixins and Variables
+"base/functions",
+"base/mixins",
+"base/colors",
+"base/variables",
+"base/typesizes",
+
+"layout/breakpoints",
+
+// #Project: Start to output CSS
+"base/reset",
+"base/accessibility",
+"base/typography",
+
+"layout/layout",
+
+"component/global",
+"component/forms",
+"component/search",
+"component/buttons",
+"component/navigation";
+
+
+// Now thw stuff needed for prototyping
+@import 
+"../_sass_patterns/refills/*";
