Update all layout files and includes with up-to-date markup best practice

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
 	<!-- Place favicon.ico in the root directory -->
 
 	<link rel="stylesheet" href="{{ "/assets/css/styles.css" | prepend: site.baseurl }}">
+	<link rel="stylesheet" href="{{ "/assets/css/prototyping.css" | prepend: site.baseurl }}">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 	<script src="{{ site.baseurl }}/assets/js/modernizr.js"></script>
