--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,17 +1,19 @@
-	<footer class="mainfoot">
-		<div class="container">
-			<p class="mainfoot--list">
-				<span class="mainfoot--link">All pages</span> 
-				{% for page in site.pages | sort:'title' %}
-				<a href="{{ site.baseurl}}{{ page.permalink }}" class="mainfoot--link">{% if page.nav-title %}{{ page.nav-title }}{% else %}{{ page.title }}{% endif %}</a> 
-				{% endfor %}
-			</p>
-			<p class="mainfoot--copyright">&copy;{{ 'now' | date: '%Y' }} Oomph, Inc.</p>
-		</div>
-	</footer>
-	
+  	<footer class="mainfoot">
+  		<div class="layout--container">
+  			<p class="mainfoot--list">
+  				<span class="mainfoot--link">All pages</span> 
+  				{% for page in site.pages | sort:'title' %}
+  				<a href="{{ site.baseurl}}{{ page.permalink }}" class="mainfoot--link">{% if page.nav-title %}{{ page.nav-title }}{% else %}{{ page.title }}{% endif %}</a>{% unless forloop.last %}, {% endunless %}
+  				{% endfor %}
+  			</p>
+  			<p class="mainfoot--copyright">&copy;{{ 'now' | date: '%Y' }} Oomph, Inc.</p>
+  		</div>
+  	</footer>
+	</div>
+
 	<div id="size"></div>
- 
+
 	<script src="//code.jquery.com/jquery-1.12.2.min.js"></script>
   <script src="{{ "assets/js/plugins.js" | prepend: site.baseurl }}"></script>
-  <script src="{{ "assets/js/main.js" | prepend: site.baseurl }}"></script>
+  <script src="{{ "assets/js/prototyping.js" | prepend: site.baseurl }}"></script>
+  <script src="{{ "assets/js/scripts.js" | prepend: site.baseurl }}"></script>
