--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,10 @@
 	<div id="top"></div>
 	
-	<header class="mainhead">
-		<div class="container">
-			<a class="mainhead--title" href="{{ site.baseurl }}">Grey Matter</a>
-		</div>
-	</header>
+	<div class="layout">
+  	<header class="mainhead">
+  		<div class="layout--container">
+  			<a class="mainhead--title" href="{{ site.baseurl }}">Grey Matter</a>
+  		</div>
+  	</header>
 	
 	{% include navigation.html %}
