--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,9 +1,11 @@
 	<div class="mainnav">
-		<div class="container">
+		<div class="layout--container">
 			<nav class="mainnav--wrapper">
 				<ul class="mainnav--list">
 					{% for node in site.pages %}
-					<li><a href="{{ site.baseurl}}{{ node.permalink }}" class="mainnav--link{% if page.url == node.url %} mainnav--link__disabled{% endif %}">{% if node.nav-title %}{{ node.nav-title }}{% else %}{{ node.title }}{% endif %}</a></li>
+  					{% unless node.permalink == '/' %}
+					<li class="mainnav--list--item"><a href="{{ site.baseurl}}{{ node.permalink }}" class="mainnav--link{% if page.url == node.url %} mainnav--link__disabled{% endif %}">{% if node.nav-title %}{{ node.nav-title }}{% else %}{{ node.title }}{% endif %}</a></li>
+					  {% endunless %}
 					{% endfor %}
 				</ul>
 			</nav>
