--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,11 +7,11 @@
 
 	{% include header.html %}
 
-	<section id="main" class="content">
-		<div class="container">
+	<main id="main" class="content layout--content">
+		<div class="layout--container">
 			{{ content }}
 		</div>
-	</section>
+	</main>
 
 	{% include footer.html %}
 
