--- a/_sass/layout/_settings.scss
+++ b/_sass/layout/_settings.scss
@@ -4,6 +4,7 @@
 $grid-columns: 12;
 $min-width: em(320);
 $max-width: em(1366);
+$page-gutter: 1rem;
 $visual-grid: false;
 $visual-grid-index: front;
 $visual-grid-opacity: 0.2;
