Styles will remain project-specific, prototyping component CSS has been broken out

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -27,9 +27,7 @@
 "component/forms",
 "component/search",
 "component/buttons",
-"component/navigation";
-
-
-// Now thw stuff needed for prototyping
-@import 
-"../_sass_patterns/refills/*";
+"component/header",
+"component/navigation",
+"component/content",
+"component/footer";
