Small markup changes. Can't extend in Prototyping mode so we use header NATO class names; cleaned up some wrappers

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,11 +9,10 @@
 	<!-- <link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
 	<!-- Place favicon.ico in the root directory -->
 
-	<link rel="stylesheet" href="{{ "/assets/css/styles.css" | prepend: site.baseurl }}">
-	<link rel="stylesheet" href="{{ "/assets/css/prototyping.css" | prepend: site.baseurl }}">
+	<link rel="stylesheet" href="{{ "assets/css/styles.css" | prepend: site.baseurl }}">
+	<link rel="stylesheet" href="{{ "assets/css/prototyping.css" | prepend: site.baseurl }}">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Boogaloo" rel="stylesheet">
 
-	<script src="{{ site.baseurl }}/assets/js/modernizr.js"></script>
-
-	<!-- Source order from https://github.com/h5bp/html5-boilerplate/blob/master/src/index.html -->
+	<script src="{{ "assets/js/modernizr.js" | prepend: site.baseurl }}"></script>
 </head>
