--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,8 @@
 	<div class="layout">
   	<header class="mainhead">
   		<div class="layout--container">
-  			<a class="mainhead--title" href="{{ site.baseurl }}">Grey Matter</a>
+  			<a class="mainhead--title alpha" href="{{ site.baseurl }}">Grey Matter</a>
+  			
+  			{% include navigation.html %}
   		</div>
   	</header>
-	
-	{% include navigation.html %}
