--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
   	<footer class="mainfoot">
   		<div class="layout--container">
   			<p class="mainfoot--list">
-  				<span class="mainfoot--link">All pages</span> 
+  				<span class="mainfoot--link">All pages: </span> 
   				{% for page in site.pages | sort:'title' %}
   				<a href="{{ site.baseurl}}{{ page.permalink }}" class="mainfoot--link">{% if page.nav-title %}{{ page.nav-title }}{% else %}{{ page.title }}{% endif %}</a>{% unless forloop.last %}, {% endunless %}
   				{% endfor %}
