--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 	<header class="content--header">
-		<h1 class="content--title">{{ page.title }}</h1>
+		<h1 class="content--title giga">{{ page.title }}</h1>
 	</header>
 	<article class="content--main">
 
