--- a/_sass/prototyping/_fonts.scss
+++ b/_sass/prototyping/_fonts.scss
@@ -3,10 +3,11 @@
 
 
 // Global font declarations
-$font-sans: $helvetica;
-$font-serif: $georgia;
-$font-mono: $monospace;
-//$font-custom: 'Google font name', fallback-font-variable;
+//$font-sans: $helvetica;
+//$font-serif: $georgia;
+//$font-mono: $monospace;
+
+//$font-custom: 'Patrick Hand', $font-sans;
 
 // Most Google fonts and others define the weight numerically
 //$font-custom-weight-light: 200;
