--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -6,7 +6,9 @@ $font-sans: $helvetica;
 $font-serif: $georgia;
 $font-mono: $monospace;
 
-$font-custom: 'Boogaloo', $font-sans;
+$font-custom: 'Roboto Mono', $font-sans;
+$font-weight-normal: 400;
+$font-weight-bold: 700;
 
 // Copy
 $paragraph: 1em;
