--- a/_sass/refills/_map.scss
+++ b/_sass/refills/_map.scss
@@ -13,7 +13,7 @@
 
 #map_canvas .firstHeading {
   font-size: 1em;
-  font-weight: bold;
+  font-weight: $font-weight-bold;
   line-height: 1em;
   margin: 0;
 }
