--- a/_sass/refills/_cards.scss
+++ b/_sass/refills/_cards.scss
@@ -49,7 +49,7 @@
     background-color: $card-header-background;
     border-bottom: $card-border;
     border-radius: $base-border-radius $base-border-radius 0 0;
-    font-weight: bold;
+    font-weight: $font-weight-bold;
     line-height: 1.5em;
     padding: ($base-spacing / 3) ($base-spacing / 2);
     transition: all 0.2s ease-in-out;
