Updates to HTML and default files

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="{{ "assets/css/styles.css" | prepend: site.baseurl }}">
 	<link rel="stylesheet" href="{{ "assets/css/prototyping.css" | prepend: site.baseurl }}">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Boogaloo" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet">
 
 	<script src="{{ "assets/js/modernizr.js" | prepend: site.baseurl }}"></script>
 </head>
