--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
 	{% include head.html %}
 
-	<body class="layout-{{ page.layout }}">
+	<body class="layout-{{ page.layout }} {{ page.body-class }}">
 
 	{% include header.html %}
 
