--- a/_sass/prototyping/_content.scss
+++ b/_sass/prototyping/_content.scss
@@ -21,3 +21,45 @@
     }
   }
 }
+
+// A few special rules for Refills on the Sample page
+// for the sample Pattern Library
+.patternlib {
+
+  .cards {
+    margin: 0 -1em;
+  }
+
+  .bullets {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  &--sample {
+    @include clearfix;
+    clear: both;
+    border-bottom: 1px solid $color-borders;
+    margin-bottom: 2rem;
+    padding-bottom: 2rem;
+
+    &--title {
+      font-weight: $font-weight-bold;
+    }
+
+    &--pattern {
+      float: left;
+      width: 67%;
+    }
+
+    &--code {
+      float: left;
+      padding-left: 1rem;
+      width: 33%;
+      
+      textarea {
+        font-size: 87.5%;
+        min-height: 12rem;
+      }
+    }
+  }
+}
