--- a/_sass/prototyping/_layout.scss
+++ b/_sass/prototyping/_layout.scss
@@ -2,6 +2,10 @@
 
   &--container {
     @include outer-container();
+  
+    /*body*/.full-width & {
+      max-width: none;
+    }
   }
 
   &--content {
