--- a/_sass/component/_forms.scss
+++ b/_sass/component/_forms.scss
@@ -1,7 +1,7 @@
 // @file forms.scss
 
 $form-input-border-color: palette(mono, 25);
-$form-input-border-focus: palette(mono,33);
+$form-input-border-focus: palette(mono, 33);
 $form-input-border-width: 1px;
 $form-input-border-radius: $default-border-radius;
 $form-input-placeholder-color: palette(mono, 33);
@@ -32,10 +32,17 @@ textarea {
 		font-style: italic;
 	}
 
-	@include touch-hover('hover') {
+  // Hint the user that this element is interactive
+  &:hover {
 		border-color: darken($form-input-border-focus, 10%);
 		outline: none;
 	}
+
+  // Adjust colors when this element is focused
+	&:focus {
+  	color: $form-input-color;
+  	border-color: $form-input-border-focus;
+  }
 
 	&[required]:focus,
 	&[required=true]:focus,
@@ -44,12 +51,6 @@ textarea {
 		box-shadow: 0 0 .5em rgba( palette(brand), .5 );
 		outline: none;
 	}
-}
-
-#{$all-text-inputs-focus},
-textarea {
-	color: $form-input-color;
-	border-color: $form-input-border-focus;
 }
 
 textarea {
@@ -74,11 +75,16 @@ input[type="file"] {
 }
 
 input[type="checkbox"],
-input[type="radio"],
+input[type="radio"] {}
+
+// Form action buttons
 input[type="submit"],
 input[type="reset"],
 input[type="button"],
 button {
+  @include transition(all 250ms ease);
+  border: $form-input-border-width solid $form-input-border-color;
+  display: inline-block;
   width: auto;
 }
 
