Begin markup and styling

--- a/_sass/base/_colors.scss
+++ b/_sass/base/_colors.scss
@@ -23,8 +23,13 @@ $palettes: (
 	// Brand should contain this project's specific color scheme
 	brand: (
 		base: #d62901, // Oomph red
+		blue: #4a7090,
 		dark: #a31f02,
-		green: #61a143
+		denim: #2d5070,
+		green: #61a143,
+		light-blue: #99b8d1,
+		orange: #e89424,
+		teal: #70bdc1
 	),
 
 	// Default color scheme, edit values in relation to the numeric representation
