--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -3,12 +3,14 @@
 
 // Global font declarations
 $font-sans: 'Source Sans Pro', $helvetica;
-$font-serif: $georgia;
+$font-serif: 'Source Serif Pro', $georgia;
 $font-mono: 'Source Code Pro', $monospace;
+$font-italic: 'Playfair Display', serif;
 
 $font-weight-light: 300;
 $font-weight-normal: 400;
-$font-weight-bold: 900;
+$font-weight-bold: 600;
+$font-weight-extra-bold: 900;
 
 // Copy
 $paragraph: 1em;
