--- a/_sass/prototyping/_front-page.scss
+++ b/_sass/prototyping/_front-page.scss
@@ -20,12 +20,12 @@
   &__label {
     @include writing-mode(vertical-rl);
     @include transform( rotate(180deg) );
-    @include transform-origin(top);
     font-size: 1em;
     font-weight: 600;
     float: right;
     letter-spacing: 0.25em;
-    padding: 0 2em; // fun fact: padding is still as you might expect, it has not been rotated
+		margin-bottom: -2em;
+    padding: 0 1em; // fun fact: padding is still as you might expect, it has not been rotated
     text-align: right;
     text-transform: uppercase;
 
@@ -180,5 +180,29 @@
 				border-bottom: 1px solid lighten(palette(brand, teal), 15%);
 			}
 		}
+	}
+}
+
+.thinking {
+
+	.section__label {
+		margin-bottom: -5em;
+		margin-top: 4em;
+	}
+
+	&__title {
+		line-height: 1.25;
+		margin-bottom: 1.5em;
+		text-align: center;
+
+		em {
+			font-size: inherit;
+			font-weight: $font-weight-extra-bold;
+		}
+	}
+
+	&__post {
+		box-shadow: 0 0 20px 2px palette(mono, 10);
+		margin-bottom: 2em;
 	}
 }
