Modifications to thinking section

--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -22,6 +22,7 @@ $vert-line-height: $line-height * 1em;
 
 // Other globals
 $default-border-radius: 4px;
+$default-box-shadow: 0 0 20px 2px palette(mono, 10);
 
 // Tables
 $table-border-collapse: true;
